# rust_engine

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  docker-compose.yml
.agent/rules/: instruction.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  pull_request_template.md
.github/prompts/: default.md
.github/workflows/: ci.yml
conf/: config.toml.template
docs/: development.md  schedule.md
examples/: basic.rs  texture_test.rs
src/: lib.rs
src/components/: mod.rs
src/components/system/: camera2d.rs  mod.rs  sprite.rs  transform2d.rs
src/core/: app.rs  mod.rs  plugin.rs  render.rs  schedule.rs
src/core/asset/: mod.rs  texture.rs
src/core/config/: config.rs  mod.rs
src/core/dicontainer/: mod.rs
src/core/ecs/: mod.rs
src/core/events/: mod.rs
src/core/input/: input.rs  mod.rs  types.rs
src/core/time/: mod.rs
src/events/: input.rs  mod.rs
src/events/system/: mod.rs  render.rs
src/platform/: mod.rs  winit_backend.rs
src/plugin/: input.rs  mod.rs
src/plugin/system/: input.rs  mod.rs
src/plugin/system/render/: mod.rs  render.rs  render2d.rs
src/time/: mod.rs
tests/: asset_texture.rs  integration_input.rs  prerender_execution.rs  schedule_order.rs
